# CivilPDF-Editor

./: .gitignore  CHANGELOG.md  README.md  electron-builder.yml  eslint.config.js  package-lock.json  package.json  state.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: enterprise-deployment.md
docs/design/: m3-m4-ocr-largeformat.md
scripts/: gen-selfsigned-cert.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.test.tsx  App.tsx  test-setup.ts
src/renderer/src/components/: AnnotToolbar.tsx  AnnotationOverlay.test.tsx  AnnotationOverlay.tsx  BookmarkPanel.tsx  ComparePdfDialog.tsx  DxSettingsModal.tsx  DxSyncButton.test.tsx  DxSyncButton.tsx  FormPanel.tsx  HeaderFooterDialog.tsx  ImageToPdfDialog.tsx  MetadataDialog.tsx  OcrPanel.test.tsx  OcrPanel.tsx  PagePanel.tsx  PageView.test.tsx  PageView.tsx  PasswordDialog.tsx  PdfPage.tsx  PdfViewer.tsx  ReviewPanel.tsx  SearchPanel.tsx  StampToolbar.tsx  TextEditLayer.tsx  WatermarkDialog.tsx  ZoomControls.test.tsx  ZoomControls.tsx
src/renderer/src/hooks/: useAppMenu.ts
src/renderer/src/lib/: embed.test.ts  embed.ts  format.test.ts  format.ts  geometry.test.ts  geometry.ts  page-ops.test.ts  page-ops.ts  pdf.ts  stamp.test.ts  stamp.ts  types.ts
src/renderer/src/lib/annotations/: cjk-font.ts  embed-annot.test.ts  embed-annot.ts  types.ts
(+42 files in other folders)
